	* Specify ARCH_INDEPENDENT when creating package version file in CMake.

v42 2021-12-07

	* Fixed issue 264: Sequence objects did not correctly report
	  is_complete() when there were living, but satisfied, expectations
	  remaining. Thank you Václav Kubernát for reporting.

	* Fixed issue 259 where CMakeFiles.txt wrongly installed trompeloeil
	  for projects that includes it. It is now an option. See FAQ for
	  details. Thank you Ismail Pazarbasi for reporting and fixing.

	* Updated Catch2 to version 2.13.7 to compile unit tests on systems
	  with glibc >= 2.34.

	* Fixed issue 255: Hex dumps showed byte values <= 15(dec) wrong.
	  Thank you Stuart Dootson for reporting.

	* Fixed issue 253: Resolve lingering warnings in early Clang compilers
	  and enable -Wzero-as-null-pointer-constant when compiling unit tests
	  with GCC and Clang.

	* Fixed issue 250: Warnings about zero argument variadic macros with
	  clang-msvc. Thank you u3shit for reporting and fixing.

	* Fixed issue 251: trompeloeil::printer<> customization point now
	  supports SFINAE expressions to constrain partial specializations.
	  Thank you  Christian Morales Vega for reporting.

	* Fixed issue 245: Modify cmake to build thread_terror on Windows with
	  MSVC.

	* Use CMake internal Threads::Threads target where needed. Thank you
	  Martin Hořeňovský for reporting.

	* For CI builds, use github actions cacheing of built libc++ to shorten
	  build times.

	* Added CMake install namespace. Thank you offa

	* Fixed bug where an expectation end of life was reported as an error
	  if it was included in a satisfied sequence. Thank you Andy Saul.

v41 2021-06-15

	* catch2 adapter works with CATCH_CONFIG_PREFIX_ALL.
	  thanks Christian Morales Vega

	* Silenced -Wreserved-identifier from Clang "latest" (13.0.0).

	* Silenced (again) the MSVC C4702 warning from the default_return<>()
	  function template.

	* Introduced type trompeloeil::printer<T> as a customization point or